--- a/ByteBank.Agencias/EdicaoAgencia.xaml
+++ b/ByteBank.Agencias/EdicaoAgencia.xaml
@@ -9,16 +9,19 @@
     <Canvas Name="container">
         <StackPanel Canvas.Top="15" Canvas.Left="15" Width="270">
             <TextBlock FontWeight="Bold">Número</TextBlock>
-            <TextBox Name="txtNumero"></TextBox>
+            <local:TextoBoxValidacao x:Name="txtNumero"></local:TextoBoxValidacao>
             
             <TextBlock FontWeight="Bold">Nome</TextBlock>
-            <TextBox Name="txtNome"></TextBox>
+            <local:TextoBoxValidacao x:Name="txtNome"></local:TextoBoxValidacao>
+            
             <TextBlock FontWeight="Bold">Telefone</TextBlock>
-            <TextBox Name="txtTelefone"></TextBox>
+            <local:TextoBoxValidacao x:Name="txtTelefone"></local:TextoBoxValidacao>
+            
             <TextBlock FontWeight="Bold">Descrição</TextBlock>
-            <TextBox Name="txtDescricao"></TextBox>
+            <local:TextoBoxValidacao x:Name="txtDescricao"></local:TextoBoxValidacao>
+            
             <TextBlock FontWeight="Bold">Endereço</TextBlock>
-            <TextBox Name="txtEndereco"></TextBox>
+            <local:TextoBoxValidacao x:Name="txtEndereco"></local:TextoBoxValidacao>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5">
                 <Button Content="Ok" Margin="15,0" Padding="5" Name="btnOk"/>
